# Hypervisor-Based-Sandbox

./: CMakeLists.txt  HYPERVISOR_COMPLETE.md  HYPERVISOR_README.md  LICENSE  Makefile  SANDBOX_OVERVIEW.txt  SANDBOX_SUMMARY.md  create_fake_malware.sh  start_hypervisor.sh
.github/workflows/: ci.yml
agent/: agent.py
sandbox/: README.md  __init__.py  kvm_manager.py  malware_detector.py  malware_signatures.py  sandbox_api.py  sandbox_core.py  sandbox_manager.py  test_samples.py  test_sandbox.py
src/host/: main.cpp  safebox.cpp  safebox.h
test-samples/fake-malware/: botnet_agent.sh  worm_propagate.sh
test-samples/scripts/: cryptominer.sh  file_writer.sh  process_spawner.sh  rootkit_kernel.sh  spyware_keylogger.sh  trojan_backdoor.sh
tests/: integration_test.sh  requirements.txt  test_agent.py  test_host.cpp
web/: README.md  app.py  app_hypervisor.py  hypervisor.css  index.html  monitor-old.js  monitor.js  monitor_hypervisor.js  requirements.txt  start.sh  style-old.css  style.css
web/test-samples/scripts/: adware_popups.sh  cpu_hog.sh  disk_filler.sh  memory_leak.sh  network_scanner.sh  ransomware_simulator.sh
